# regular_search

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  main.cpp  search_tree.cpp  search_tree.hpp  storage_tnode.cpp  storage_tnode.hpp  test.cpp  tree_node.cpp  tree_node.hpp  tree_regular.cpp  tree_regular.hpp
.cache/clangd/index/: main.cpp.F7F003843DF87026.idx
.github/workflows/: c-cpp.yml
include/: search_tree.hpp  storage_tnode.hpp  tree_node.hpp  tree_regular.hpp  tree_search_engine.hpp
poems/: ASPushkin.txt  wikiC++.txt
source/: search_tree.cpp  storage_tnode.cpp  test.cpp  tree_regular.cpp
